[metadata]
name = dserver
version = attr: bin.VERSION
author = Daichi Kawakami
author_email = kothoa105ka416@gmail.com
long_description = file: README.md, LICENSE
description = provides sinmple socket server.
license = MIT
classfiltters =
    LICENSE :: MIT
    Programing Language :: Python :: 3.7.0
    Operating System :: Windows10

[options]
package_dir= src
packages = find:
install_requires =
    importlib; python_version >= "3.7.0"

[options.packages.find]
where = src